# c-ext

./: CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: build-linux.yml  clang-format.yml  cppcheck.yml  shellcheck.yml  spellcheck.yml
docs/: err.md  file.md  print.md
include/: c_ext.h
src/: c_ext.cpp  test.cpp
tools/: format-all.sh
